CMAKE_MINIMUM_REQUIRED(VERSION 3.8 FATAL_ERROR)

SET(CMAKE_C_COMPILER_WORKS TRUE)
SET(CMAKE_CXX_COMPILER_WORKS TRUE)

PROJECT(TarkovSpy LANGUAGES C)

SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/modules")

SET(BUILD_DIR ${CMAKE_BINARY_DIR})
SET(CMAKE_CURRENT_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/bin")

#set(CMAKE_EXE_LINKER_FLAGS "")

#IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
	#	SET(BITARCH_FLAG "-m64")
#ELSEIF(CMAKE_SIZEOF_VOID_P EQUAL 4)
#	SET(BITARCH_FLAG "-m32")
#ENDIF()

#SET(VC_FLAGS "-Wl,/subsystem:windows")
SET(VC_FLAGS "")
SET(C_FLAGS "-std=gnu17 -m64 -Wall")
SET(C_FLAGS_DEBUG "-O0 -g3")
SET(C_FLAGS_RELEASE "-Ofast -Os")

SET(CMAKE_C_FLAGS "${CMAKE_CFLAGS} ${C_FLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${C_FLAGS_DEBUG}")
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${C_FLAGS_RELEASE}")

ADD_SUBDIRECTORY(deps/TinyCThread)

ADD_EXECUTABLE(TarkovSpy WIN32
	"${CMAKE_CURRENT_LIST_DIR}/deps/glad/src/glad.c"
	"${CMAKE_CURRENT_LIST_DIR}/src/ini.h"
	"${CMAKE_CURRENT_LIST_DIR}/src/ini.c"
	"${CMAKE_CURRENT_LIST_DIR}/src/nuklear.h"
	"${CMAKE_CURRENT_LIST_DIR}/src/nuklear_glfw_gl3.h"
	"${CMAKE_CURRENT_LIST_DIR}/src/main.c"
	"${CMAKE_CURRENT_LIST_DIR}/src/unet.h"
	"${CMAKE_CURRENT_LIST_DIR}/src/hashrecord.h"
	"${CMAKE_CURRENT_LIST_DIR}/src/hashrecord.c"
	"${CMAKE_CURRENT_LIST_DIR}/src/world.h"
	"${CMAKE_CURRENT_LIST_DIR}/src/world.c"
	"${CMAKE_CURRENT_LIST_DIR}/src/bytestream.h"
	"${CMAKE_CURRENT_LIST_DIR}/src/stretchyarray.h"
	"${CMAKE_CURRENT_LIST_DIR}/src/network.h"
	"${CMAKE_CURRENT_LIST_DIR}/src/network.c"
	"${CMAKE_CURRENT_LIST_DIR}/src/math.h"
	"${CMAKE_CURRENT_LIST_DIR}/src/common.h"
	 )

#IF(WIN32 AND NOT (MINGW OR CYGWIN OR MSYS))
#	MESSAGE("System is WIN32")
#	SET(GLFW_LIBRARY_DIR "${CMAKE_CURRENT_LIST_DIR}/deps/glfw-3.3.2.bin.WIN64/lib-vc2019")
#ELSEIF(MINGW OR CYGWIN OR MSYS)
#	MESSAGE("System is MINGW || CYGWIN || MSYS")
	SET(GLFW_LIBRARY_DIR "${CMAKE_CURRENT_LIST_DIR}/deps/glfw-3.3.2.bin.WIN64/lib-mingw-w64")
#ENDIF()

TARGET_LINK_OPTIONS(TarkovSpy  PRIVATE "-L${CMAKE_CURRENT_LIST_DIR}/deps/npcap/Lib/x64"
	-L${GLFW_LIBRARY_DIR})


#include_directories("${CMAKE_CURRENT_LIST_DIR}/deps/glfw-3.3.2.bin.WIN32/include")

#TARGET_LINK_LIBRARIES(TarkovSpy PRIVATE OpenGL32 wsock32 user32 kernel32 gdi32 glfw3dll packet wpcap tinycthread)
TARGET_LINK_LIBRARIES(TarkovSpy PRIVATE OpenGL32 msvcrt wsock32 user32 kernel32 gdi32 glfw3 packet wpcap tinycthread)

TARGET_INCLUDE_DIRECTORIES(TarkovSpy PRIVATE
	"${CMAKE_CURRENT_LIST_DIR}/deps/npcap/Include"
	"${CMAKE_CURRENT_LIST_DIR}/deps/glm-c"
	"${CMAKE_CURRENT_LIST_DIR}/deps/glad/include"
	"${CMAKE_CURRENT_LIST_DIR}/deps/glfw-3.3.2.bin.WIN64/include"
	)

SET_TARGET_PROPERTIES(TarkovSpy
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)

FILE(COPY "${CMAKE_CURRENT_LIST_DIR}\\data" DESTINATION "${BUILD_DIR}")
FILE(COPY "${GLFW_LIBRARY_DIR}\\glfw3.dll" DESTINATION "${BUILD_DIR}\\bin")
FILE(COPY ".\\dll\\libatomic-1.dll" DESTINATION "${BUILD_DIR}\\bin")
FILE(COPY ".\\dll\\libwinpthread-1.dll" DESTINATION "${BUILD_DIR}\\bin")